--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>provia-app</title>
+    <title>Provia | The Verification Engine</title>
+    <meta name="theme-color" content="#050505">
+    <meta name="description" content="Automated skill verification protocol auditing GitHub repositories for technical competence.">
   </head>
   <body>
     <div id="root"></div>
